--- a/Interfaces/da.lproj/InfoWindow.strings
+++ b/Interfaces/da.lproj/InfoWindow.strings
@@ -1,54 +1,38 @@
-
-/* Class = "NSWindow"; title = "Vindue"; ObjectID = "5"; */
-"5.title" = "Vindue";
-
-/* Class = "NSTextFieldCell"; title = "(Mappenavn)"; ObjectID = "104"; */
-"104.title" = "(Mappenavn)";
-
-/* Class = "NSTextFieldCell"; title = "Sidst opdateret:"; ObjectID = "105"; */
+/* Class = "NSTextFieldCell"; title = "Last Refreshed:"; ObjectID = "105"; */
 "105.title" = "Sidst opdateret:";
 
-/* Class = "NSTextFieldCell"; title = "(Sidste opdateringsdato)"; ObjectID = "106"; */
-"106.title" = "(Sidste opdateringsdato)";
-
-/* Class = "NSButtonCell"; title = "Godkend"; ObjectID = "109"; */
+/* Class = "NSButtonCell"; title = "Validate"; ObjectID = "109"; */
 "109.title" = "Godkend";
 
-/* Class = "NSButtonCell"; title = "Feed URL:"; ObjectID = "110"; */
-"xPF-M9-oZG.title" = "Feed URL";
-
-/* Class = "NSTextFieldCell"; title = "Brugernavn:"; ObjectID = "111"; */
+/* Class = "NSTextFieldCell"; title = "User name:"; ObjectID = "111"; */
 "111.title" = "Brugernavn:";
 
-/* Class = "NSTextFieldCell"; title = "Kodeord:\n"; ObjectID = "112"; */
+/* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "112"; */
 "112.title" = "Kodeord:";
 
-/* Class = "NSButtonCell"; title = "Opdater autorisering"; ObjectID = "115"; */
+/* Class = "NSButtonCell"; title = "Update Authentication"; ObjectID = "115"; */
 "115.title" = "Opdater autorisering";
 
-/* Class = "NSButtonCell"; title = "Autorisering:"; ObjectID = "116"; */
-"U0N-RF-bUt.title" = "Autorisering";
-
-/* Class = "NSTextFieldCell"; title = "Størrelse:"; ObjectID = "117"; */
+/* Class = "NSTextFieldCell"; title = "Size:"; ObjectID = "117"; */
 "117.title" = "Størrelse:";
 
-/* Class = "NSTextFieldCell"; title = "Ulæst:\n"; ObjectID = "118"; */
+/* Class = "NSTextFieldCell"; title = "Unread:"; ObjectID = "118"; */
 "118.title" = "Ulæst:";
 
-/* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "119"; */
-"119.title" = "\n";
-
-/* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "120"; */
-"120.title" = "\n";
-
-/* Class = "NSButtonCell"; title = "Abonneret"; ObjectID = "121"; */
+/* Class = "NSButtonCell"; title = "Subscribed"; ObjectID = "121"; */
 "121.title" = "Abonneret";
 
-/* Class = "NSButtonCell"; title = "Generelt:"; ObjectID = "122"; */
-"i9j-KH-c3D.title" = "Generelt";
+/* Class = "NSButtonCell"; title = "Load Full HTML Articles"; ObjectID = "126"; */
+"126.title" = "Hent fulde HTML-artikler";
 
-/* Class = "NSButtonCell"; title = "Beskrivelse:"; ObjectID = "124"; */
+/* Class = "NSTextFieldCell"; title = "Description"; ObjectID = "E84-Uo-ybg"; */
 "E84-Uo-ybg.title" = "Beskrivelse";
 
-/* Class = "NSButtonCell"; title = "Hent fulde HTML-artikler"; ObjectID = "126"; */
-"126.title" = "Hent fulde HTML-artikler";
+/* Class = "NSTextFieldCell"; title = "Authentication"; ObjectID = "U0N-RF-bUt"; */
+"U0N-RF-bUt.title" = "Autorisering";
+
+/* Class = "NSTextFieldCell"; title = "General"; ObjectID = "i9j-KH-c3D"; */
+"i9j-KH-c3D.title" = "Generelt";
+
+/* Class = "NSTextFieldCell"; title = "Feed URL"; ObjectID = "xPF-M9-oZG"; */
+"xPF-M9-oZG.title" = "Feed URL";
