--- a/Interfaces/de.lproj/InfoWindow.strings
+++ b/Interfaces/de.lproj/InfoWindow.strings
@@ -1,54 +1,38 @@
-
-/* Class = "NSWindow"; title = "Fenster"; ObjectID = "5"; */
-"5.title" = "Fenster";
-
-/* Class = "NSTextFieldCell"; title = "(Folder name)"; ObjectID = "104"; */
-"104.title" = "(Folder name)";
-
-/* Class = "NSTextFieldCell"; title = "Letzte Aktualisierung:"; ObjectID = "105"; */
+/* Class = "NSTextFieldCell"; title = "Last Refreshed:"; ObjectID = "105"; */
 "105.title" = "Letzte Aktualisierung:";
 
-/* Class = "NSTextFieldCell"; title = "(Last refresh date)"; ObjectID = "106"; */
-"106.title" = "(Last refresh date)";
-
-/* Class = "NSButtonCell"; title = "Überprüfen"; ObjectID = "109"; */
+/* Class = "NSButtonCell"; title = "Validate"; ObjectID = "109"; */
 "109.title" = "Überprüfen";
 
-/* Class = "NSButtonCell"; title = "Abonnementadresse:"; ObjectID = "110"; */
-"xPF-M9-oZG.title" = "Abonnementadresse";
-
-/* Class = "NSTextFieldCell"; title = "Benutzername:"; ObjectID = "111"; */
+/* Class = "NSTextFieldCell"; title = "User name:"; ObjectID = "111"; */
 "111.title" = "Benutzername:";
 
-/* Class = "NSTextFieldCell"; title = "Passwort:\n"; ObjectID = "112"; */
+/* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "112"; */
 "112.title" = "Passwort:";
 
-/* Class = "NSButtonCell"; title = "Authentifizierung aktualisieren"; ObjectID = "115"; */
+/* Class = "NSButtonCell"; title = "Update Authentication"; ObjectID = "115"; */
 "115.title" = "Authentifizierung aktualisieren";
 
-/* Class = "NSButtonCell"; title = "Authentifizierung:"; ObjectID = "116"; */
-"U0N-RF-bUt.title" = "Authentifizierung";
-
-/* Class = "NSTextFieldCell"; title = "Artikelanzahl:"; ObjectID = "117"; */
+/* Class = "NSTextFieldCell"; title = "Size:"; ObjectID = "117"; */
 "117.title" = "Artikelanzahl:";
 
-/* Class = "NSTextFieldCell"; title = "Ungelesen:\n"; ObjectID = "118"; */
+/* Class = "NSTextFieldCell"; title = "Unread:"; ObjectID = "118"; */
 "118.title" = "Ungelesen:";
 
-/* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "119"; */
-"119.title" = "\n";
-
-/* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "120"; */
-"120.title" = "\n";
-
-/* Class = "NSButtonCell"; title = "Abonniert"; ObjectID = "121"; */
+/* Class = "NSButtonCell"; title = "Subscribed"; ObjectID = "121"; */
 "121.title" = "Abonniert";
 
-/* Class = "NSButtonCell"; title = "Allgemein:"; ObjectID = "122"; */
-"i9j-KH-c3D.title" = "Allgemein";
+/* Class = "NSButtonCell"; title = "Load Full HTML Articles"; ObjectID = "126"; */
+"126.title" = "Ganze Webseite sofort anzeigen";
 
-/* Class = "NSButtonCell"; title = "Beschreibung:"; ObjectID = "124"; */
+/* Class = "NSTextFieldCell"; title = "Description"; ObjectID = "E84-Uo-ybg"; */
 "E84-Uo-ybg.title" = "Beschreibung";
 
-/* Class = "NSButtonCell"; title = "Ganze Webseite sofort anzeigen"; ObjectID = "126"; */
-"126.title" = "Ganze Webseite sofort anzeigen";
+/* Class = "NSTextFieldCell"; title = "Authentication"; ObjectID = "U0N-RF-bUt"; */
+"U0N-RF-bUt.title" = "Authentifizierung";
+
+/* Class = "NSTextFieldCell"; title = "General"; ObjectID = "i9j-KH-c3D"; */
+"i9j-KH-c3D.title" = "Allgemein";
+
+/* Class = "NSTextFieldCell"; title = "Feed URL"; ObjectID = "xPF-M9-oZG"; */
+"xPF-M9-oZG.title" = "Abonnementadresse";
