--- a/Interfaces/fr.lproj/InfoWindow.strings
+++ b/Interfaces/fr.lproj/InfoWindow.strings
@@ -1,54 +1,38 @@
-
-/* Class = "NSWindow"; title = "Fenêtre"; ObjectID = "5"; */
-"5.title" = "Fenêtre";
-
-/* Class = "NSTextFieldCell"; title = "(Folder name)"; ObjectID = "104"; */
-"104.title" = "(Folder name)";
-
-/* Class = "NSTextFieldCell"; title = "Dernier rafraîchissement :"; ObjectID = "105"; */
+/* Class = "NSTextFieldCell"; title = "Last Refreshed:"; ObjectID = "105"; */
 "105.title" = "Dernier rafraîchissement :";
 
-/* Class = "NSTextFieldCell"; title = "(Last refresh date)"; ObjectID = "106"; */
-"106.title" = "(Last refresh date)";
-
-/* Class = "NSButtonCell"; title = "Vérifier"; ObjectID = "109"; */
+/* Class = "NSButtonCell"; title = "Validate"; ObjectID = "109"; */
 "109.title" = "Vérifier";
 
-/* Class = "NSButtonCell"; title = "URL du flux :"; ObjectID = "110"; */
-"xPF-M9-oZG.title" = "URL du flux";
-
-/* Class = "NSTextFieldCell"; title = "Nom d'utilisateur :"; ObjectID = "111"; */
+/* Class = "NSTextFieldCell"; title = "User name:"; ObjectID = "111"; */
 "111.title" = "Nom d'utilisateur :";
 
-/* Class = "NSTextFieldCell"; title = "Mot de passe :\n"; ObjectID = "112"; */
+/* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "112"; */
 "112.title" = "Mot de passe :";
 
-/* Class = "NSButtonCell"; title = "Mise à jour de l'identification"; ObjectID = "115"; */
+/* Class = "NSButtonCell"; title = "Update Authentication"; ObjectID = "115"; */
 "115.title" = "Mise à jour de l'identification";
 
-/* Class = "NSButtonCell"; title = "Identification :"; ObjectID = "116"; */
-"U0N-RF-bUt.title" = "Identification";
-
-/* Class = "NSTextFieldCell"; title = "Taille :"; ObjectID = "117"; */
+/* Class = "NSTextFieldCell"; title = "Size:"; ObjectID = "117"; */
 "117.title" = "Taille :";
 
-/* Class = "NSTextFieldCell"; title = "Non lus :\n"; ObjectID = "118"; */
+/* Class = "NSTextFieldCell"; title = "Unread:"; ObjectID = "118"; */
 "118.title" = "Non lus :";
 
-/* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "119"; */
-"119.title" = "\n";
-
-/* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "120"; */
-"120.title" = "\n";
-
-/* Class = "NSButtonCell"; title = "Abonné"; ObjectID = "121"; */
+/* Class = "NSButtonCell"; title = "Subscribed"; ObjectID = "121"; */
 "121.title" = "Abonné";
 
-/* Class = "NSButtonCell"; title = "Général :"; ObjectID = "122"; */
-"i9j-KH-c3D.title" = "Général";
+/* Class = "NSButtonCell"; title = "Load Full HTML Articles"; ObjectID = "126"; */
+"126.title" = "Afficher la page complète immédiatement";
 
-/* Class = "NSButtonCell"; title = "Description :"; ObjectID = "124"; */
+/* Class = "NSTextFieldCell"; title = "Description"; ObjectID = "E84-Uo-ybg"; */
 "E84-Uo-ybg.title" = "Description";
 
-/* Class = "NSButtonCell"; title = "Afficher la page complète immédiatement"; ObjectID = "126"; */
-"126.title" = "Afficher la page complète immédiatement";
+/* Class = "NSTextFieldCell"; title = "Authentication"; ObjectID = "U0N-RF-bUt"; */
+"U0N-RF-bUt.title" = "Identification";
+
+/* Class = "NSTextFieldCell"; title = "General"; ObjectID = "i9j-KH-c3D"; */
+"i9j-KH-c3D.title" = "Général";
+
+/* Class = "NSTextFieldCell"; title = "Feed URL"; ObjectID = "xPF-M9-oZG"; */
+"xPF-M9-oZG.title" = "URL du flux";
