--- a/Interfaces/gl.lproj/InfoWindow.strings
+++ b/Interfaces/gl.lproj/InfoWindow.strings
@@ -1,21 +1,8 @@
-
-/* Class = "NSWindow"; title = "Window"; ObjectID = "5"; */
-"5.title" = "Fiestra";
-
-/* Class = "NSTextFieldCell"; title = "(Folder name)"; ObjectID = "104"; */
-"104.title" = "(Nome do cartafol)";
-
 /* Class = "NSTextFieldCell"; title = "Last Refreshed:"; ObjectID = "105"; */
 "105.title" = "Última actualización:";
 
-/* Class = "NSTextFieldCell"; title = "(Last refresh date)"; ObjectID = "106"; */
-"106.title" = "(Data da última actualización)";
-
 /* Class = "NSButtonCell"; title = "Validate"; ObjectID = "109"; */
 "109.title" = "Validar";
-
-/* Class = "NSButtonCell"; title = "Feed URL:"; ObjectID = "110"; */
-"xPF-M9-oZG.title" = "URL da fonte";
 
 /* Class = "NSTextFieldCell"; title = "User name:"; ObjectID = "111"; */
 "111.title" = "Nome de usuario:";
@@ -26,9 +13,6 @@
 /* Class = "NSButtonCell"; title = "Update Authentication"; ObjectID = "115"; */
 "115.title" = "Actualizar autenticación";
 
-/* Class = "NSButtonCell"; title = "Authentication:"; ObjectID = "116"; */
-"U0N-RF-bUt.title" = "Autenticación";
-
 /* Class = "NSTextFieldCell"; title = "Size:"; ObjectID = "117"; */
 "117.title" = "Tamaño:";
 
@@ -38,11 +22,17 @@
 /* Class = "NSButtonCell"; title = "Subscribed"; ObjectID = "121"; */
 "121.title" = "Subscrito";
 
-/* Class = "NSButtonCell"; title = "General:"; ObjectID = "122"; */
-"i9j-KH-c3D.title" = "Xeral";
-
-/* Class = "NSButtonCell"; title = "Description:"; ObjectID = "124"; */
-"E84-Uo-ybg.title" = "Descrición";
-
 /* Class = "NSButtonCell"; title = "Load Full HTML Articles"; ObjectID = "126"; */
 "126.title" = "Cargar artigos HTML completamente";
+
+/* Class = "NSTextFieldCell"; title = "Description"; ObjectID = "E84-Uo-ybg"; */
+"E84-Uo-ybg.title" = "Descrición";
+
+/* Class = "NSTextFieldCell"; title = "Authentication"; ObjectID = "U0N-RF-bUt"; */
+"U0N-RF-bUt.title" = "Autenticación";
+
+/* Class = "NSTextFieldCell"; title = "General"; ObjectID = "i9j-KH-c3D"; */
+"i9j-KH-c3D.title" = "Xeral";
+
+/* Class = "NSTextFieldCell"; title = "Feed URL"; ObjectID = "xPF-M9-oZG"; */
+"xPF-M9-oZG.title" = "URL da fonte";
