--- a/Interfaces/nl.lproj/InfoWindow.strings
+++ b/Interfaces/nl.lproj/InfoWindow.strings
@@ -1,54 +1,38 @@
-
-/* Class = "NSWindow"; title = "Venster"; ObjectID = "5"; */
-"5.title" = "Venster";
-
-/* Class = "NSTextFieldCell"; title = "(Mapnaam)"; ObjectID = "104"; */
-"104.title" = "(Mapnaam)";
-
-/* Class = "NSTextFieldCell"; title = "Laatste keer vernieuwd:"; ObjectID = "105"; */
+/* Class = "NSTextFieldCell"; title = "Last Refreshed:"; ObjectID = "105"; */
 "105.title" = "Laatste keer vernieuwd:";
 
-/* Class = "NSTextFieldCell"; title = "(Datum laatste vernieuwing)"; ObjectID = "106"; */
-"106.title" = "(Datum laatste vernieuwing)";
-
-/* Class = "NSButtonCell"; title = "Valideer"; ObjectID = "109"; */
+/* Class = "NSButtonCell"; title = "Validate"; ObjectID = "109"; */
 "109.title" = "Valideer";
 
-/* Class = "NSButtonCell"; title = "URL van feed:"; ObjectID = "110"; */
-"xPF-M9-oZG.title" = "URL van feed";
-
-/* Class = "NSTextFieldCell"; title = "Gebruikersnaam:"; ObjectID = "111"; */
+/* Class = "NSTextFieldCell"; title = "User name:"; ObjectID = "111"; */
 "111.title" = "Gebruikersnaam:";
 
-/* Class = "NSTextFieldCell"; title = "Wachtwoord:\n"; ObjectID = "112"; */
+/* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "112"; */
 "112.title" = "Wachtwoord:";
 
-/* Class = "NSButtonCell"; title = "Werk authenticatie bij"; ObjectID = "115"; */
+/* Class = "NSButtonCell"; title = "Update Authentication"; ObjectID = "115"; */
 "115.title" = "Werk authenticatie bij";
 
-/* Class = "NSButtonCell"; title = "Authenticatie:"; ObjectID = "116"; */
-"U0N-RF-bUt.title" = "Authenticatie";
-
-/* Class = "NSTextFieldCell"; title = "Grootte:"; ObjectID = "117"; */
+/* Class = "NSTextFieldCell"; title = "Size:"; ObjectID = "117"; */
 "117.title" = "Grootte:";
 
-/* Class = "NSTextFieldCell"; title = "Ongelezen:\n"; ObjectID = "118"; */
+/* Class = "NSTextFieldCell"; title = "Unread:"; ObjectID = "118"; */
 "118.title" = "Ongelezen:";
 
-/* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "119"; */
-"119.title" = "\n";
-
-/* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "120"; */
-"120.title" = "\n";
-
-/* Class = "NSButtonCell"; title = "Geabonneerd"; ObjectID = "121"; */
+/* Class = "NSButtonCell"; title = "Subscribed"; ObjectID = "121"; */
 "121.title" = "Geabonneerd";
 
-/* Class = "NSButtonCell"; title = "Algemeen:"; ObjectID = "122"; */
-"i9j-KH-c3D.title" = "Algemeen";
+/* Class = "NSButtonCell"; title = "Load Full HTML Articles"; ObjectID = "126"; */
+"126.title" = "Gebruik webpagina voor artikelen";
 
-/* Class = "NSButtonCell"; title = "Omschrijving:"; ObjectID = "124"; */
+/* Class = "NSTextFieldCell"; title = "Description"; ObjectID = "E84-Uo-ybg"; */
 "E84-Uo-ybg.title" = "Omschrijving";
 
-/* Class = "NSButtonCell"; title = "Gebruik webpagina voor artikelen"; ObjectID = "126"; */
-"126.title" = "Gebruik webpagina voor artikelen";
+/* Class = "NSTextFieldCell"; title = "Authentication"; ObjectID = "U0N-RF-bUt"; */
+"U0N-RF-bUt.title" = "Authenticatie";
+
+/* Class = "NSTextFieldCell"; title = "General"; ObjectID = "i9j-KH-c3D"; */
+"i9j-KH-c3D.title" = "Algemeen";
+
+/* Class = "NSTextFieldCell"; title = "Feed URL"; ObjectID = "xPF-M9-oZG"; */
+"xPF-M9-oZG.title" = "URL van feed";
