--- a/Interfaces/zh-Hans.lproj/InfoWindow.strings
+++ b/Interfaces/zh-Hans.lproj/InfoWindow.strings
@@ -1,54 +1,38 @@
-
-/* Class = "NSWindow"; title = "窗口"; ObjectID = "5"; */
-"5.title" = "窗口";
-
-/* Class = "NSTextFieldCell"; title = "(文件夹名称)"; ObjectID = "104"; */
-"104.title" = "(文件夹名称)";
-
-/* Class = "NSTextFieldCell"; title = "上次更新:"; ObjectID = "105"; */
+/* Class = "NSTextFieldCell"; title = "Last Refreshed:"; ObjectID = "105"; */
 "105.title" = "上次更新:";
 
-/* Class = "NSTextFieldCell"; title = "(上次更新时间)"; ObjectID = "106"; */
-"106.title" = "(上次更新时间)";
-
-/* Class = "NSButtonCell"; title = "认证"; ObjectID = "109"; */
+/* Class = "NSButtonCell"; title = "Validate"; ObjectID = "109"; */
 "109.title" = "认证";
 
-/* Class = "NSButtonCell"; title = "频道 URL:"; ObjectID = "110"; */
-"xPF-M9-oZG.title" = "频道 URL";
-
-/* Class = "NSTextFieldCell"; title = "用户名:"; ObjectID = "111"; */
+/* Class = "NSTextFieldCell"; title = "User name:"; ObjectID = "111"; */
 "111.title" = "用户名:";
 
-/* Class = "NSTextFieldCell"; title = "密码:\n"; ObjectID = "112"; */
+/* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "112"; */
 "112.title" = "密码:";
 
-/* Class = "NSButtonCell"; title = "更新验证信息"; ObjectID = "115"; */
+/* Class = "NSButtonCell"; title = "Update Authentication"; ObjectID = "115"; */
 "115.title" = "更新验证信息";
 
-/* Class = "NSButtonCell"; title = "验证:"; ObjectID = "116"; */
-"U0N-RF-bUt.title" = "验证";
-
-/* Class = "NSTextFieldCell"; title = "大小:"; ObjectID = "117"; */
+/* Class = "NSTextFieldCell"; title = "Size:"; ObjectID = "117"; */
 "117.title" = "大小:";
 
-/* Class = "NSTextFieldCell"; title = "未读:\n"; ObjectID = "118"; */
+/* Class = "NSTextFieldCell"; title = "Unread:"; ObjectID = "118"; */
 "118.title" = "未读:";
 
-/* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "119"; */
-"119.title" = "\n";
-
-/* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "120"; */
-"120.title" = "\n";
-
-/* Class = "NSButtonCell"; title = "订阅"; ObjectID = "121"; */
+/* Class = "NSButtonCell"; title = "Subscribed"; ObjectID = "121"; */
 "121.title" = "订阅";
-
-/* Class = "NSButtonCell"; title = "通用:"; ObjectID = "122"; */
-"i9j-KH-c3D.title" = "通用";
-
-/* Class = "NSButtonCell"; title = "介绍:"; ObjectID = "124"; */
-"E84-Uo-ybg.title" = "介绍";
 
 /* Class = "NSButtonCell"; title = "Load Full HTML Articles"; ObjectID = "126"; */
 "126.title" = "Load Full HTML Articles";
+
+/* Class = "NSTextFieldCell"; title = "Description"; ObjectID = "E84-Uo-ybg"; */
+"E84-Uo-ybg.title" = "介绍";
+
+/* Class = "NSTextFieldCell"; title = "Authentication"; ObjectID = "U0N-RF-bUt"; */
+"U0N-RF-bUt.title" = "验证";
+
+/* Class = "NSTextFieldCell"; title = "General"; ObjectID = "i9j-KH-c3D"; */
+"i9j-KH-c3D.title" = "通用";
+
+/* Class = "NSTextFieldCell"; title = "Feed URL"; ObjectID = "xPF-M9-oZG"; */
+"xPF-M9-oZG.title" = "频道 URL";
