--- a/Interfaces/zh-Hant.lproj/InfoWindow.strings
+++ b/Interfaces/zh-Hant.lproj/InfoWindow.strings
@@ -1,54 +1,38 @@
-
-/* Class = "NSWindow"; title = "視窗"; ObjectID = "5"; */
-"5.title" = "視窗";
-
-/* Class = "NSTextFieldCell"; title = "(檔案夾名稱)"; ObjectID = "104"; */
-"104.title" = "(檔案夾名稱)";
-
-/* Class = "NSTextFieldCell"; title = "上次重新整理："; ObjectID = "105"; */
+/* Class = "NSTextFieldCell"; title = "Last Refreshed:"; ObjectID = "105"; */
 "105.title" = "上次重新整理：";
 
-/* Class = "NSTextFieldCell"; title = "(上次重新整理日期)"; ObjectID = "106"; */
-"106.title" = "(上次重新整理日期)";
-
-/* Class = "NSButtonCell"; title = "驗證"; ObjectID = "109"; */
+/* Class = "NSButtonCell"; title = "Validate"; ObjectID = "109"; */
 "109.title" = "驗證";
 
-/* Class = "NSButtonCell"; title = "訂閱頻道 URL："; ObjectID = "110"; */
-"xPF-M9-oZG.title" = "訂閱頻道 URL";
-
-/* Class = "NSTextFieldCell"; title = "使用者名稱："; ObjectID = "111"; */
+/* Class = "NSTextFieldCell"; title = "User name:"; ObjectID = "111"; */
 "111.title" = "使用者名稱：";
 
-/* Class = "NSTextFieldCell"; title = "密碼：\n"; ObjectID = "112"; */
+/* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "112"; */
 "112.title" = "密碼：";
 
-/* Class = "NSButtonCell"; title = "更新認證"; ObjectID = "115"; */
+/* Class = "NSButtonCell"; title = "Update Authentication"; ObjectID = "115"; */
 "115.title" = "更新認證";
 
-/* Class = "NSButtonCell"; title = "認證："; ObjectID = "116"; */
-"U0N-RF-bUt.title" = "認證";
-
-/* Class = "NSTextFieldCell"; title = "大小："; ObjectID = "117"; */
+/* Class = "NSTextFieldCell"; title = "Size:"; ObjectID = "117"; */
 "117.title" = "大小：";
 
-/* Class = "NSTextFieldCell"; title = "未讀取：\n"; ObjectID = "118"; */
+/* Class = "NSTextFieldCell"; title = "Unread:"; ObjectID = "118"; */
 "118.title" = "未讀取：";
 
-/* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "119"; */
-"119.title" = "\n";
-
-/* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "120"; */
-"120.title" = "\n";
-
-/* Class = "NSButtonCell"; title = "已訂閱"; ObjectID = "121"; */
+/* Class = "NSButtonCell"; title = "Subscribed"; ObjectID = "121"; */
 "121.title" = "已訂閱";
 
-/* Class = "NSButtonCell"; title = "一般："; ObjectID = "122"; */
-"i9j-KH-c3D.title" = "一般";
+/* Class = "NSButtonCell"; title = "Load Full HTML Articles"; ObjectID = "126"; */
+"126.title" = "Use Web Page for Articles";
 
-/* Class = "NSButtonCell"; title = "描述："; ObjectID = "124"; */
+/* Class = "NSTextFieldCell"; title = "Description"; ObjectID = "E84-Uo-ybg"; */
 "E84-Uo-ybg.title" = "描述";
 
-/* Class = "NSButtonCell"; title = "Use Web Page for Articles"; ObjectID = "126"; */
-"126.title" = "Use Web Page for Articles";
+/* Class = "NSTextFieldCell"; title = "Authentication"; ObjectID = "U0N-RF-bUt"; */
+"U0N-RF-bUt.title" = "認證";
+
+/* Class = "NSTextFieldCell"; title = "General"; ObjectID = "i9j-KH-c3D"; */
+"i9j-KH-c3D.title" = "一般";
+
+/* Class = "NSTextFieldCell"; title = "Feed URL"; ObjectID = "xPF-M9-oZG"; */
+"xPF-M9-oZG.title" = "訂閱頻道 URL";
